Add functions of counting revisions and skipping the updates

--- a/Week02_1_Lab_GitHub.ipynb
+++ b/Week02_1_Lab_GitHub.ipynb
@@ -54,22 +54,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1009"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# You should be able to practice the count_files() method here before adding it to the python script. \n",
     "# Alternatively you can do Step 4 first so that you do not continually download new files and then \n",
     "# work within that script directly. \n",
+    "from pathlib import Path\n",
+    "import os\n",
+    "def count_revisions(path: Path, folders: str):\n",
+    "    count = 0\n",
+    "    \n",
+    "    for item in os.listdir(path):\n",
+    "        item_path = os.path.join(path, item)\n",
+    "        \n",
+    "        if os.path.isdir(item_path):\n",
+    "            count += count_revisions(item_path, folders) if folders == 'False' else (count_revisions(item_path, folders) + 1) # Recursive call for subdirectories\n",
+    "        else:\n",
+    "            count += 1  # Increment count for files\n",
+    "    \n",
+    "    return count\n",
     "\n",
-    "def count_files():\n",
-    "    return"
+    "count_revisions(Path(\"./data/1\"))\n",
+    "\n",
+    "#finish"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "TCN",
    "language": "python",
    "name": "python3"
   },
@@ -83,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
